--- a/entries/entry8/entry8.html
+++ b/entries/entry8/entry8.html
@@ -61,96 +61,103 @@
 
 <section class="workout-section">
   <h1 class="workout-section_title">EASY WORKOUT ROUTINE</h1>
-  <div class="all_tables">
-      <div class="workout-section_plan workout-plan1">
-          <table class="deadlift-table">
-              <caption>AB WORKOUT</caption>
-              <thead>
-                  <tr>
-                      <th>Exercise</th>
-                      <th>Series/Reps</th>
-                  </tr>
-              </thead>
-              <tbody>
-                  <tr class="dark-table">
-                      <td>Plank</td>
-                      <td>4series / 30sec</td>
-                  </tr>
-                  <tr class="light-table">
-                      <td>Leg Raises</td>
-                      <td>4series / 10reps</td>
-                  </tr>
-                  <tr class="dark-table">
-                      <td>Bicycle Crunches</td>
-                      <td>4series / 10reps</td>
-                  </tr>
-                  <tr class="light-table">
-                      <td>Russian Twists</td>
-                      <td>4series / 10reps</td>
-                  </tr>
-              </tbody>
-          </table>
-      </div>
-      <div class="workout-section_plan workout-plan2">
-          <table>
-              <caption>ARM WORKOUT</caption>
-              <thead>
-                  <tr>
-                      <th>Exercise</th>
-                      <th>Series/Reps</th>
-                  </tr>
-              </thead>
-              <tbody>
-                  <tr class="dark-table">
-                      <td>Bicep Curls</td>
-                      <td>4series / 10reps</td>
-                  </tr>
-                  <tr class="light-table">
-                      <td>Shoulder Press</td>
-                      <td>4series / 10reps</td>
-                  </tr>
-                  <tr class="dark-table">
-                      <td>Shoulder Taps</td>
-                      <td>4series / 10reps</td>
-                  </tr>
-                  <tr class="light-table">
-                      <td>Tricep Extensions</td>
-                      <td>4series / 10reps</td>
-                  </tr>
-              </tbody>
-          </table>
-      </div>
-      <div class="workout-section_plan workout-plan3">
-          <table>
-              <caption>GLUTE WORKOUT</caption>
-              <thead>
-                  <tr>
-                      <th>Exercise</th>
-                      <th>Series/Reps</th>
-                  </tr>
-              </thead>
-              <tbody>
-                  <tr class="dark-table">
-                      <td>Squats</td>
-                      <td>4series / 10reps</td>
-                  </tr>
-                  <tr class="light-table">
-                      <td>Lunges</td>
-                      <td>4series / 10reps</td>
-                  </tr>
-                  <tr class="dark-table">
-                      <td>Glute Bridges</td>
-                      <td>4series / 10reps</td>
-                  </tr>
-                  <tr class="light-table">
-                      <td>Deadlifts</td>
-                      <td>4series / 10reps</td>
-                  </tr>
-              </tbody>
-          </table>
-      </div>
+  
+  <div class="workout-container">
+    <!-- AB Workout Section -->
+    <div class="workout-box workout-plan1">
+        <h2 class="workout-title">AB WORKOUT</h2>
+        <table class="deadlift-table">
+            <thead>
+                <tr>
+                    <th>Exercise</th>
+                    <th>Series/Reps</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="dark-table">
+                    <td>Plank</td>
+                    <td>4series / 30sec</td>
+                </tr>
+                <tr class="light-table">
+                    <td>Leg Raises</td>
+                    <td>4series / 10reps</td>
+                </tr>
+                <tr class="dark-table">
+                    <td>Bicycle Crunches</td>
+                    <td>4series / 10reps</td>
+                </tr>
+                <tr class="light-table">
+                    <td>Russian Twists</td>
+                    <td>4series / 10reps</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    
+    <!-- Arm Workout Section -->
+    <div class="workout-box workout-plan2">
+        <h2 class="workout-title">ARM WORKOUT</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Exercise</th>
+                    <th>Series/Reps</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="dark-table">
+                    <td>Bicep Curls</td>
+                    <td>4series / 10reps</td>
+                </tr>
+                <tr class="light-table">
+                    <td>Shoulder Press</td>
+                    <td>4series / 10reps</td>
+                </tr>
+                <tr class="dark-table">
+                    <td>Shoulder Taps</td>
+                    <td>4series / 10reps</td>
+                </tr>
+                <tr class="light-table">
+                    <td>Tricep Extensions</td>
+                    <td>4series / 10reps</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    
+    <!-- Glute Workout Section -->
+    <div class="workout-box workout-plan3">
+        <h2 class="workout-title">GLUTE WORKOUT</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Exercise</th>
+                    <th>Series/Reps</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="dark-table">
+                    <td>Squats</td>
+                    <td>4series / 10reps</td>
+                </tr>
+                <tr class="light-table">
+                    <td>Lunges</td>
+                    <td>4series / 10reps</td>
+                </tr>
+                <tr class="dark-table">
+                    <td>Glute Bridges</td>
+                    <td>4series / 10reps</td>
+                </tr>
+                <tr class="light-table">
+                    <td>Deadlifts</td>
+                    <td>4series / 10reps</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
   </div>
 </section>
+
 
 
 </head>
