--- a/entries/entry8/entry8.html
+++ b/entries/entry8/entry8.html
@@ -60,39 +60,50 @@
 </html>
 
 <section class="workout-section">
-  <h1 class="workout-section_title">EASY WORKOUT ROUTINE</h1>
+  <h1 class="workout-section_title">EASY WORKOUT ROUTINE #1</h1>
   
-  <div class="workout-container">
-    <!-- AB Workout Section -->
-    <div class="workout-box workout-plan1">
-        <h2 class="workout-title">AB WORKOUT</h2>
-        <table class="deadlift-table">
-            <thead>
-                <tr>
-                    <th>Exercise</th>
-                    <th>Series/Reps</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr class="dark-table">
-                    <td>Plank</td>
-                    <td>4series / 30sec</td>
-                </tr>
-                <tr class="light-table">
-                    <td>Leg Raises</td>
-                    <td>4series / 10reps</td>
-                </tr>
-                <tr class="dark-table">
-                    <td>Bicycle Crunches</td>
-                    <td>4series / 10reps</td>
-                </tr>
-                <tr class="light-table">
-                    <td>Russian Twists</td>
-                    <td>4series / 10reps</td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
+<div class="image-gallery">
+  <img src="assets/IMG_Ab.JPG" class="gallery" alt="Girl Doing a Plank at the Gym"/>
+  <img src="assets/IMG_Ab2.JPG" class="gallery" alt="Girl Doing Bicyle Crunches" />
+</div>
+<div class="workout-container">
+  <!-- AB Workout Section -->
+  <div class="workout-box workout-plan1">
+      <h2 class="workout-title">AB WORKOUT</h2>
+      <table class="deadlift-table">
+          <thead>
+              <tr>
+                  <th>Exercise</th>
+                  <th>Series/Reps</th>
+              </tr>
+          </thead>
+          <tbody>
+              <tr class="dark-table">
+                  <td>Plank</td>
+                  <td>4series / 30sec</td>
+              </tr>
+              <tr class="light-table">
+                  <td>Leg Raises</td>
+                  <td>4series / 10reps</td>
+              </tr>
+              <tr class="dark-table">
+                  <td>Bicycle Crunches</td>
+                  <td>4series / 10reps</td>
+              </tr>
+              <tr class="light-table">
+                  <td>Russian Twists</td>
+                  <td>4series / 10reps</td>
+              </tr>
+          </tbody>
+      </table>
+  </div>
+
+  <section class="workout-section">
+    <h1 class="workout-section_title">EASY WORKOUT ROUTINE #2</h1>
+  
+<div class="image-gallery">
+    <img src="assets/IMG_Arm.JPG" class="gallery" alt="Girl Lifting Weights" />
+</div>
     
     <!-- Arm Workout Section -->
     <div class="workout-box workout-plan2">
@@ -124,10 +135,18 @@
             </tbody>
         </table>
     </div>
-    
-    <!-- Glute Workout Section -->
+
+ <section class="workout-section">
+  <h1 class="workout-section_title">EASY WORKOUT ROUTINE #3</h1>
+
+<div class="image-gallery">
+    <img src="assets/IMG_Stretch.JPG" class="gallery" alt="Girl Streching at the Gym Before Workout" />
+    <img src="assets/IMG_Walk.JPG" class="gallery" alt="Girl Walking on the Treadmill" />
+</div>
+
+    <!-- Cardio Workout Section -->
     <div class="workout-box workout-plan3">
-        <h2 class="workout-title">GLUTE WORKOUT</h2>
+        <h2 class="workout-title">CARDIO WORKOUT</h2>
         <table>
             <thead>
                 <tr>
@@ -137,20 +156,20 @@
             </thead>
             <tbody>
                 <tr class="dark-table">
-                    <td>Squats</td>
-                    <td>4series / 10reps</td>
+                    <td>Stretching</td>
+                    <td>1session / 10-15min</td>
                 </tr>
                 <tr class="light-table">
-                    <td>Lunges</td>
-                    <td>4series / 10reps</td>
+                    <td>Walking on Treadmill</td>
+                    <td>1session / 20-30min</td>
                 </tr>
                 <tr class="dark-table">
-                    <td>Glute Bridges</td>
-                    <td>4series / 10reps</td>
+                    <td>Jumping Jacks</td>
+                    <td>4series / 30sec</td>
                 </tr>
                 <tr class="light-table">
-                    <td>Deadlifts</td>
-                    <td>4series / 10reps</td>
+                    <td>Mountain Climbers</td>
+                    <td>4series / 30sec</td>
                 </tr>
             </tbody>
         </table>
