Workout Wheel Title

--- a/entries/entry8/entry8.html
+++ b/entries/entry8/entry8.html
@@ -180,6 +180,10 @@
 </head>
 <body>
 
+  <div class="workout-title-container">
+    <h2 class="workout-title">WORKOUT! SPIN THE EXERCISE WHEEL!</h2>
+</div>
+
 <div class="page">
   <header class="header">
     <div class="game-title">
