--- a/entries/entry8/entry8.html
+++ b/entries/entry8/entry8.html
@@ -180,8 +180,8 @@
 </head>
 <body>
 
-  <div class="workout-title-container">
-    <h2 class="workout-title">WORKOUT! SPIN THE EXERCISE WHEEL!</h2>
+  <div style="background-color: rgb(23, 101, 114); color: white; text-align: center; padding: 10px; border-radius: 10px; margin-bottom: 20px; font-size: 40px; font-family: Dela Gothic One, sans-serif;>
+    Workout! Spin The Exercise Wheel!
 </div>
 
 <div class="page">
