--- a/entries/entry6/entry6.html
+++ b/entries/entry6/entry6.html
@@ -59,6 +59,12 @@
         <img src="assets/IMG_1652.JPG" class="gallery" alt="Putting on Shoes" />
         <img src="assets/Outfit.jpg" class="gallery" alt="10/28/2024 Outfit" />
     </div>
+
+    <a href="https://edikted.com/products/s15224_black?variant=43462276939943&currency=USD&utm_medium=product_sync&utm_source=google&utm_content=sag_organic&utm_campaign=sag_organic&country=US&srsltid=AfmBOoq_Ds0m5kEZSYpk9judS6X9t_-qM2YKkSxR1576ARZMdG-M8_2Gx4M" class="clothing-link" target="_blank">
+      <img src="https://cdn.shopify.com/s/files/1/1234/5678/products/clothing-image.jpg" alt="Black Clothing Item" class="clothing-preview">
+    </a>
+
+    
 </body>
 </html>
     
