--- a/entries/entry6/entry6.html
+++ b/entries/entry6/entry6.html
@@ -61,7 +61,7 @@
     </div>
 
     <a href="https://edikted.com/products/s15224_black?variant=43462276939943&currency=USD&utm_medium=product_sync&utm_source=google&utm_content=sag_organic&utm_campaign=sag_organic&country=US&srsltid=AfmBOoq_Ds0m5kEZSYpk9judS6X9t_-qM2YKkSxR1576ARZMdG-M8_2Gx4M" class="clothing-link" target="_blank">
-      <img src="https://edikted.com/cdn/shop/files/Edikted_Lookbook_10_09_202496958.jpg?v=1728694433&width=1200" alt="Black Clothing Item" class="clothing-preview">
+      <img src="assets/ShirtImage.png" alt="Black Long Sleeve Shirt" class="clothing-preview">
     </a>
 
     
