--- a/entries/entry6/entry6.html
+++ b/entries/entry6/entry6.html
@@ -64,7 +64,15 @@
       <img src="assets/ShirtImage.png" alt="Black Long Sleeve Shirt" class="clothing-preview">
     </a>
 
-    
+    <a href="https://edikted.com/products/s15224_black?variant=43462276939943&currency=USD&utm_medium=product_sync&utm_source=google&utm_content=sag_organic&utm_campaign=sag_organic&country=US&srsltid=AfmBOoq_Ds0m5kEZSYpk9judS6X9t_-qM2YKkSxR1576ARZMdG-M8_2Gx4M" class="clothing-link" target="_blank">
+      <img src="assets/ShirtImage.png" alt="Black Long Sleeve Shirt" class="clothing-preview">
+    </a>
+
+  <a href="https://stockx.com/air-jordan-4-retro-blank-canvas-w?country=US&currencyCode=USD&size=5W&g_acctid=709-098-4271&g_adgroupid=149818741676&g_adid=660532471902&g_adtype=pla&g_campaign=OD+-+Sneakers+-+Adult+-+High+CM+-+%28US%29&g_campaignid=20228439809&g_ifcreative=&g_ifproduct=product&g_keyword=&g_keywordid=aud-2296358373251:pla-2367070776653&g_merchantid=111829866&g_network=g&g_partition=2367070776653&g_productchannel=online&g_productid=05b5890d-69ce-4209-8aee-4753c29b9e37&gclsrc=aw.ds&&utm_source=google&utm_medium=cpc&utm_campaign=od_sneakers_adult_highcm_(us)&utm_campaignid=20228439809&content=660532471902&keyword=&gad_source=1&gclid=CjwKCAiA0rW6BhAcEiwAQH28ItsV4lCIl02UyOkx6bSu_zSX2X9ARjjahYSYn4enrapf3uG9fmAjaBoC6-8QAvD_BwE" class="clothing-link" target="_blank">
+    <img src="assets/Shoe.png" alt="Air Jordan 4 Retro Blank Canvas" class="clothing-preview">
+  </a>
+
+
 </body>
 </html>
     
