--- a/entries/entry6/entry6.html
+++ b/entries/entry6/entry6.html
@@ -61,7 +61,7 @@
     </div>
 
 <div class="outfit-title">
-      <h2>Click on the Items Below to Shop My Outfit!</h2>
+      <h2>CLICK ON THE ITEMS BELOW TO SHOP MY OUTFIT!</h2>
 </div>
     
 <div class="outfit-items">
