Dunkin Compressed File

--- a/entries/entry5/entry5.html
+++ b/entries/entry5/entry5.html
@@ -33,7 +33,7 @@
     <div class="video-container">
         <video src="assets/Liquid Video.mp4" autoplay muted playsinline loop></video>
         <div class="video-overlay">
-            <img src="assets/DUNKIN2.png" alt="Dunkin Overlay Image">
+            <img src="assets/Dunkin.png" alt="Dunkin Overlay Image">
                 <div class="overlay-text">
                     MORNING 
                     <br>
