--- a/entries/entry5/entry5.html
+++ b/entries/entry5/entry5.html
@@ -79,6 +79,10 @@
       </div>
     </div>
 
+    <script src="script.js"></script> <!-- Link to your JavaScript file -->
+</body>
+</html>
+
 
     <div class="image-gallery">
         <img src="assets/IMG_1631.JPEG" class="gallery" alt="Outside of Dunkin" />
