--- a/entries/entry5/entry5.html
+++ b/entries/entry5/entry5.html
@@ -50,25 +50,38 @@
     </div>
     <br>
 
-    <div class="coffee-cup">
-      <div class="filling"></div>
-  </div>
-  <div class="coffee_name">Select a Coffee</div>
+    <div class="social"><a href="https://twitter.com/rominamartinlib?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-screen-name="false" data-dnt="true" data-show-count="false">Follow @rominamartinlib</a>
+    </div>
+    <div class="options">
+      <button id="americano">Americano</button>
+      <button id="au_lait">Au lait</button>
+      <button id="capuccino">Capuccino</button>
+      <button id="corretto">Corretto</button>
+      <button id="espresso">Espresso</button>
+      <button id="latte">Latte</button>
+      <button id="lungo">Lungo</button>
+      <button id="macchiato">Macchiato</button>
+      <button id="mocha">Mocha</button>
+      <button id="ristretto">Ristretto</button>
+    </div>
+    <div class="container">
+      <h1 class="coffee_name">Choose your coffee</h1>
+      <div class="cup">
+        <div class="filling reset">
+          <div class="coffee">Coffee</div>
+          <div class="water">Water</div>
+          <div class="liquor">Liquor</div>
+          <div class="milk">Milk</div>
+          <div class="whipped_cream">Whipped cream</div>
+          <div class="milk_foam">Milk foam</div>
+          <div class="steamed_milk">Steamed milk</div>
+          <div class="chocolate">Chocolate</div>
+        </div>
+        <div class="plate"></div>
+      </div>
+    </div>
 
-  <div class="buttons">
-      <button id="americano" class="button">Americano</button>
-      <button id="au_lait" class="button">Au Lait</button>
-      <button id="capuccino" class="button">Capuccino</button>
-      <button id="corretto" class="button">Corretto</button>
-      <button id="espresso" class="button">Espresso</button>
-      <button id="latte" class="button">Latte</button>
-      <button id="lungo" class="button">Lungo</button>
-      <button id="macchiato" class="button">Macchiato</button>
-      <button id="mocha" class="button">Mocha</button>
-      <button id="ristretto" class="button">Ristretto</button>
-  </div>
-
-  <script src="script.js"></script> <!-- Link to your JavaScript file -->
+    <script src="script.js"></script> <!-- Link to your JavaScript file -->
 </body>
 </html>
 
