--- a/entries/entry5/entry5.html
+++ b/entries/entry5/entry5.html
@@ -50,40 +50,36 @@
     </div>
     <br>
 
-    <div class="container">
-      <h2>Customize Your Coffee</h2>
-      <div class="options">
-        <div class="option">
-          <h3>Cup Size</h3>
-          <div class="buttons">
-            <button onclick="selectOption('Cup Size', 'Small')">Small</button>
-            <button onclick="selectOption('Cup Size', 'Medium')">Medium</button>
-            <button onclick="selectOption('Cup Size', 'Large')">Large</button>
-          </div>
-        </div>
-        <div class="option">
-          <h3>Flavor</h3>
-          <div class="buttons">
-            <button onclick="selectOption('Flavor', 'Vanilla')">Vanilla</button>
-            <button onclick="selectOption('Flavor', 'Caramel')">Caramel</button>
-            <button onclick="selectOption('Flavor', 'Hazelnut')">Hazelnut</button>
-          </div>
-        </div>
-        <div class="option">
-          <h3>Milk</h3>
-          <div class="buttons">
-            <button onclick="selectOption('Milk', 'Whole')">Whole</button>
-            <button onclick="selectOption('Milk', 'Skim')">Skim</button>
-            <button onclick="selectOption('Milk', 'Almond')">Almond</button>
-          </div>
-        </div>
-      </div>
-    </div>
+    <div class="options">
+      <button id="americano">Americano</button>
+      <button id="au_lait">Au lait</button>
+      <button id="capuccino">Capuccino</button>
+      <button id="corretto">Corretto</button>
+      <button id="espresso">Espresso</button>
+      <button id="latte">Latte</button>
+      <button id="lungo">Lungo</button>
+      <button id="macchiato">Macchiato</button>
+      <button id="mocha">Mocha</button>
+      <button id="ristretto">Ristretto</button>
+  </div>
   
-    <div class="result">
-      <h3>Your Coffee Selection:</h3>
-      <p id="coffee-selection">No selections yet.</p>
-    </div>
+  <div class="container">
+      <h1 class="coffee_name">Choose your coffee</h1>
+      <div class="cup">
+          <div class="filling reset">
+              <div class="coffee">Coffee</div>
+              <div class="water">Water</div>
+              <div class="liquor">Liquor</div>
+              <div class="milk">Milk</div>
+              <div class="whipped_cream">Whipped cream</div>
+              <div class="milk_foam">Milk foam</div>
+              <div class="steamed_milk">Steamed milk</div>
+              <div class="chocolate">Chocolate</div>
+          </div>
+          <div class="plate"></div>
+      </div>
+  </div>
+  
 
     <div class="image-gallery">
         <img src="assets/IMG_1631.JPEG" class="gallery" alt="Outside of Dunkin" />
