--- a/entries/entry3/entry3.html
+++ b/entries/entry3/entry3.html
@@ -60,6 +60,10 @@
     </div>
 </div>
 
+<canvas onmousedown="start()" onmouseup="end()" onmousemove="draw(event)" id="myCanvas" width="300" height="300"></canvas>
+<button onclick="cleanse()">Clear</button>
+<button id="erase" onclick="erase()">Erase</button>
+<input type="color" id="colorInput" oninput="changeColor()">
 <button onclick="topFunction()" id="myBtn" title="Go to top">TOP</button>
 
 <script>
@@ -82,6 +86,50 @@ function topFunction() {
   document.body.scrollTop = 0;
   document.documentElement.scrollTop = 0;
 }
+
+const canvas = document.getElementById("myCanvas");
+const ctx = canvas.getContext("2d");
+let drawing = false;
+let color = "#000000";
+let erasing = false;
+
+const draw = e => {
+    posX = e.clientX;
+    posY = e.clientY;
+    if (erasing) {
+        ctx.clearRect(posX, posY, 4, 4);
+    }
+    else if (drawing) {
+        ctx.fillStyle = color;
+        ctx.fillRect(posX, posY, 4, 4);
+    }
+}
+
+const start = () => drawing = true;
+
+const end = () => drawing = false;
+
+const cleanse = () => ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+const erase = () => {
+    const button = document.getElementById("erase");
+  
+    if (!erasing) {
+      erasing = true;
+      button.innerHTML = "Draw";
+    } else {
+      erasing = false;
+      button.innerHTML = "Erase";
+    }
+  }
+
+const changeColor = () => {
+    color = document.getElementById("colorInput").value;
+    if (erasing) {
+        erase();
+    }
+}
+
 </script>
 
 </body>
