--- a/entries/entry4/entry4.html
+++ b/entries/entry4/entry4.html
@@ -47,36 +47,31 @@
         <p>The daily ritual of self-care is a significant moment of mindfulness. This practice is an intentional act of prioritizing my well-being, both physically and mentally. My daily ritual of self-care is a mindful and personal process that brings balance and structure to my day. This ritual starts with small acts that let me unwind from the world—such as showering, doing my skincare, or even a facemask. </p>
     </div>
     <br>
-    <div class="text-section2">
-        <h1>ORGANZING CLOTHES</h1>
-</div>
-
-
-<div class="purple-section clear">
-    <div class="mid-content">
-        <div class="purple-bttom">
-            <div class="purple-content left">
-                <div class="purple-paragraph">
-                    <h2>Here are some tips for organizing clothes using the KonMari method:</h2>
-                    <p>
-                        Declutter first: Get rid of things you don't need before you start organizing.<br>
-                        Fold neatly: Folding clothes instead of stacking them saves space and prevents wrinkles.<br>
-                        Store vertically: Stand folded clothes up instead of stacking them. <br>
-                        Arrange by length: Put longer items on the left and shorter items on the right to create an upward slope.<br>
-                        Arrange by color: Organizing clothes by color can make it easier to find things and look cool.<br>
-                        Store off-season items in a bin: Store off-season items in a bin high up in your closet or cabinets.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
 
 <br>
     <div class="image-gallery">
         <img src="assets/SelfCare1.gif" class="gallery" alt="Doing Self Care 1"/>
         <img src="assets/SelfCare2.gif" class="gallery" alt="Doing Self Care 2"/>
     </div>
+
+    <div class="outfit-title">
+      <h2>CLICK ON THE ITEMS BELOW TO SHOP MY SKINCARE ROUTINE PRODUCTS!</h2>
+</div>
+    
+<div class="outfit-items">
+  <a href="https://www.sephora.com/product/glow-recipe-watermelon-glow-niacinamide-dew-drops-P466123?country_switch=us&lang=en&skuId=2404846&om_mmc=ppc-GG_17798154149___2404846__9067609_c&country_switch=us&lang=en&gad_source=1&gclid=CjwKCAiA9bq6BhAKEiwAH6bqoLY1kvP5FnEy1gJ4eF8zq0fSUD-Z_GXYSpMcb1LS_rU-0FmXbc6c6BoC3A0QAvD_BwE&gclsrc=aw.ds" class="clothing-link" target="_blank">
+      <img src="assets/SkinToner.png" alt="Glow Recipe Toner" class="clothing-preview">
+    </a>
+    <a href="https://www.sephora.com/product/the-ordinary-natural-moisturizing-factors-phytoceramides-moisture-rich-surface-hydration-P505136?country_switch=us&lang=en&skuId=2644169&om_mmc=ppc-GG_20700118067___2644169__9067609_c&gad_source=1&gclid=CjwKCAiA9bq6BhAKEiwAH6bqoD9zqcwQTGQTRVnCsAg-JiwtDxEg5SukeNNYQPEIh8JQfR389tfeDBoCUekQAvD_BwE&gclsrc=aw.ds" class="clothing-link" target="_blank">
+    <img src="assets/FaceCream.png" alt="The Ordinary Natural Moisturizing Factors + Phytoceramides Moisturizer" class="clothing-preview">
+  </a>
+  <a href="https://www.amazon.com/PanOxyl-Acne-Foaming-Wash-Ounce/dp/B0DCHDQMDW/ref=asc_df_B0DCHDQMDW?mcid=98711142a81c30caacfb07f17984dd10&tag=hyprod-20&linkCode=df0&hvadid=702590731412&hvpos=&hvnetw=g&hvrand=3110359426559583074&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9067609&hvtargid=pla-2566104636152&psc=1" class="clothing-link" target="_blank">
+    <img src="assets/FaceWash.png" alt="PanOxyl Acne Foaming Wash" class="clothing-preview">
+  </a>
+  <a href="https://www.sephora.com/product/24k-gold-pure-luxury-lift-firm-hydra-gel-eye-patches-P406104?country_switch=us&lang=en&skuId=1809318&srsltid=AfmBOoqx4lBpzNHp1p2LB0txE6Xk8T1vHqjD0NTX-IPNHR74pvPrVcCJx84" class="clothing-link" target="_blank">
+    <img src="assets/GoldEyePatches.png" alt="24K Gold Hydra-Gel Eye Patches" class="clothing-preview">
+  </a>
+</div>
 
     <div class="text-section2">
       <h1>PRIORITIZE YOU: SIMPLE SELF-CARE PRACTICES</h1>
@@ -113,10 +108,6 @@
 <div class="image-gallery">
   <img src="assets/SelfCare3.gif" class="gallery" alt="Vacuuming Carpet" />
 </div>
-    <h1 class="game-title" style="color: rgb(23, 101, 114);">Play Marie Kondo's "Spark Joy" Drag-and-Drop Sorting Game</h1>
-
-    <h1 style="color:rgb(23, 101, 114);">Does It Spark Joy?</h1>
-    <p style="color: rgb(23, 101, 114);">Drag items into the correct bin: <strong>Keep</strong> or <strong>Discard</strong>.</p>
     
     <div class="text-section">
         <p>Marie Kondo, a Japanese organizing consultant and author, is globally renowned for her minimalist philosophy and her revolutionary approach to tidying, known as the KonMari Method. Her work emphasizes the profound connection between physical space and mental well-being, advocating for intentional living through the art of decluttering. Kondo’s method resonates across cultures, particularly in a world increasingly concerned with sustainability and mental health. By encouraging individuals to live with intention and appreciate the items they own, she inspires a broader dialogue about how our environments affect our inner peace.</p>
