--- a/entries/entry4/entry4.html
+++ b/entries/entry4/entry4.html
@@ -106,11 +106,11 @@
 </div>
 
 <div class="image-gallery">
-  <img src="assets/SelfCare3.gif" class="gallery" alt="Vacuuming Carpet" />
+  <img src="assets/SelfCare3.gif" class="gallery" alt="Self Care Face Mask and Eye Patches Image" />
 </div>
     
     <div class="text-section">
-        <p>Marie Kondo, a Japanese organizing consultant and author, is globally renowned for her minimalist philosophy and her revolutionary approach to tidying, known as the KonMari Method. Her work emphasizes the profound connection between physical space and mental well-being, advocating for intentional living through the art of decluttering. Kondo’s method resonates across cultures, particularly in a world increasingly concerned with sustainability and mental health. By encouraging individuals to live with intention and appreciate the items they own, she inspires a broader dialogue about how our environments affect our inner peace.</p>
+        <p>Self-care is not a one-time act—it's a consistent practice that nurtures your mind, body, and soul. By making space for moments of rest, reflection, and rejuvenation, you can cultivate a balanced life. Remember, your well-being matters, and even the smallest daily rituals can lead to big transformations. Whether it's through a peaceful night routine, mindful skincare, or quiet moments of gratitude, every step you take towards self-care is a step towards becoming your best self. Make time for you—because you deserve it.</p>
     </div>
 
 </body>
