--- a/entries/entry2/entry2.html
+++ b/entries/entry2/entry2.html
@@ -123,7 +123,11 @@
       </div>
     </div>
     </div>
+    
+    <br>
 
+
+<br>
 
     <div class="purple-section clear">
       <div class="mid-content">
@@ -171,27 +175,6 @@
 <h1>MARIE KONDO’S SIMPLE TIPS FOR A CLEANER, JOYFUL SPACE</h1>
 </div>
 
-
-<h1 class="game-title" style="color: rgb(234, 192, 199);">Play Marie Kondo's "Spark Joy" Drag-and-Drop Sorting Game</h1>
-
-<h1 style="color:rgb(224, 113, 133);">Does It Spark Joy?</h1>
-<p style="color: rgb(224, 113, 133);">Drag items into the correct bin: <strong>Keep</strong> or <strong>Discard</strong>.</p>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/addons/p5.sound.min.js"></script>
-<script src="sketch.js"></script>
-</head>
-
-<h1 style="color:rgb(224, 113, 133);">
-  press W = brows (cursor at the end of the left brow)<br>
-  press E = eyeshadow (cursor at the end of left eye) <br>
-  press B = blush (cursor at the end of left cheek) <br>
-  press H = highlight (cursor at the tip of the nose) <br>
-  press L = lipstick (cursor at the middle of the lips) 
-</h1>
-
-
-
 <div class="text-section">
   <p>Marie Kondo, a Japanese organizing consultant and author, is globally renowned for her minimalist philosophy and her revolutionary approach to tidying, known as the KonMari Method. Her work emphasizes the profound connection between physical space and mental well-being, advocating for intentional living through the art of decluttering. Kondo’s method resonates across cultures, particularly in a world increasingly concerned with sustainability and mental health. By encouraging individuals to live with intention and appreciate the items they own, she inspires a broader dialogue about how our environments affect our inner peace.</p>
 </div>
@@ -223,6 +206,19 @@
 </div>
 </section>
 
+<h1 class="game-title" style="color: rgb(234, 192, 199);">Let’s Play: The Ultimate Makeup Application Game!</h1>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/addons/p5.sound.min.js"></script>
+<script src="sketch.js"></script>
+</head>
+
+<p style="color:rgb(224, 113, 133);">
+  PRESS W = Brows (Cursor at the end of the left brow)<br>
+  PRESS E = Eyeshadow (Cursor at the end of left eye) <br>
+  PRESS B = Blush (Cursor at the end of left cheek) <br>
+  PRESS H = Highlight (Cursor at the tip of the nose) <br>
+  PRESS L = Lipstick (Cursor at the middle of the lips)<strong>PRESS</strong> or <strong>Cursor</strong>.</p>
 
 </body>
 </html>
