--- a/entries/entry2/entry2.html
+++ b/entries/entry2/entry2.html
@@ -123,7 +123,7 @@
       </div>
     </div>
     </div>
-    
+
     <br>
 
 
@@ -218,7 +218,8 @@
   PRESS E = Eyeshadow (Cursor at the end of left eye) <br>
   PRESS B = Blush (Cursor at the end of left cheek) <br>
   PRESS H = Highlight (Cursor at the tip of the nose) <br>
-  PRESS L = Lipstick (Cursor at the middle of the lips)<strong>PRESS</strong> or <strong>Cursor</strong>.</p>
+  PRESS L = Lipstick (Cursor at the middle of the lips)
+</p>
 
 </body>
 </html>
