--- a/entries/entry1/entry1.html
+++ b/entries/entry1/entry1.html
@@ -84,9 +84,9 @@
 <img src="assets/IMG_6.jpg" class="gallery" alt="Best Friend Image">
 </div>
 
-<h1 class="game-title" style="color: rgb(237, 229, 248);">Capture the Moment: Cherish Your Connections</h1>
+<h1 class="game-title" style="color: rgb(237, 229, 248); text-align: center;">Capture the Moment: Cherish Your Connections</h1>
 
-<h1 style="color:rgb(75, 56, 105);">
+<h1 style="color:rgb(255, 205, 118); text-align: center;">
 1. Find the Camera Icon: Look for the camera icon located on the page. <br>
 2. Click to Capture: Once you’re ready, click on the camera icon to take a picture. <br>
    You can snap a photo with yourself, friends, or anything that captures your moment. <br>
@@ -97,7 +97,7 @@
 <br>
 
 <br>
-<p style="color: rgb(75, 56, 105);">As part of our commitment to fostering meaningful connections, we've added an interactive feature that allows you to capture and preserve special moments during your visit to the website. Whether you're sharing a fun moment with friends or simply enjoying the experience, this feature lets you take a picture and automatically save it to your files. This element is inspired by the “Social Hour” ritual, where the joy of connecting with others and creating lasting memories is at the heart of the experience. We hope this feature encourages you to pause, capture the moment, and cherish the connections that make life more joyful.</p>
+<p style="color: rgb(255, 205, 118); text-align: center;">As part of our commitment to fostering meaningful connections, we've added an interactive feature that allows you to capture and preserve special moments during your visit to the website. Whether you're sharing a fun moment with friends or simply enjoying the experience, this feature lets you take a picture and automatically save it to your files. This element is inspired by the “Social Hour” ritual, where the joy of connecting with others and creating lasting memories is at the heart of the experience. We hope this feature encourages you to pause, capture the moment, and cherish the connections that make life more joyful.</p>
 <br>
 
 <br>
