--- a/entries/entry1/entry1.html
+++ b/entries/entry1/entry1.html
@@ -62,20 +62,10 @@
   SOCIAL HOUR: RECHARGING THROUGH CONNECTION</h1>
 <br>
 
-<br>
-<div class="purple-section clear">
-<div class="mid-content">
-  <div class="purple-bttom">
-      <div class="purple-content left">
-          <div class="purple-paragraph">
-              <p>
-              Social Hour is my time to connect with the people who matter most. It’s an opportunity to step away from my solo activities and engage in meaningful conversations, share stories, and catch up on life. Whether I’m meeting friends for coffee, chatting with family on the phone, or interacting on social media, this ritual helps me feel grounded and supported. It’s not just about staying in touch; it’s about fostering relationships that uplift and inspire me. Social Hour energizes me, reminding me of the importance of community and the joy of shared experiences. 
-              </p>
-          </div>
-      </div>
-  </div>
+<div class="text-section">
+  <p>Social Hour is my time to connect with the people who matter most. It’s an opportunity to step away from my solo activities and engage in meaningful conversations, share stories, and catch up on life. Whether I’m meeting friends for coffee, chatting with family on the phone, or interacting on social media, this ritual helps me feel grounded and supported. It’s not just about staying in touch; it’s about fostering relationships that uplift and inspire me. Social Hour energizes me, reminding me of the importance of community and the joy of shared experiences.</p>
 </div>
-</div>
+
 
 <div class="image-gallery">
 <img src="assets/IMG_5.jpeg" class="gallery" alt="Boyfriend and Girlfriend Dorm Image">
