--- a/entries/entry1/entry1.html
+++ b/entries/entry1/entry1.html
@@ -72,7 +72,10 @@
 <img src="assets/IMG_6.jpg" class="gallery" alt="Best Friend Image">
 </div>
 
-<h1 class="game-title" style="color: rgb(237, 229, 248); text-align: center;">CAPTURE THE MOMENT! CHERISH YOUR CONNECTIONS</h1>
+<div class="text-section2">
+  <h1>CAPTURE THE MOMENT! CHERISH YOUR CONNECTIONS</h1>
+</div>
+
 
 <h1 style="color:rgb(255, 205, 118); text-align: left; font-size: 25px; padding-left: 50px;">
 1. Find the Camera Icon: Look for the camera icon located on the page. <br>
