--- a/entries/entry1/entry1.html
+++ b/entries/entry1/entry1.html
@@ -81,7 +81,7 @@
 <br>
 
 
-<div class="text-section2">
+<div class="text-steps">
 <h1>1. Find the Camera Icon: Look for the camera icon located on the page. <br>
 2. Click to Capture: Once you’re ready, click on the camera icon to take a picture. <br>
    You can snap a photo with yourself, friends, or anything that captures your moment. <br>
