--- a/entries/entry1/entry1.html
+++ b/entries/entry1/entry1.html
@@ -83,8 +83,7 @@
 
 <div class="text-steps">
 <h1>1. Find the Camera Icon: Look for the camera icon located on the page. <br>
-2. Click to Capture: Once you’re ready, click on the camera icon to take a picture. <br>
-   You can snap a photo with yourself, friends, or anything that captures your moment. <br>
+2. Click to Capture: Once you’re ready, click on the camera icon to take a picture. You can snap a photo with yourself, friends, or anything that captures your moment. <br>
 3. Save Automatically: After you capture the photo, it will automatically save to your device’s files, so you can easily revisit and share the memory later. <br>
 4. Enjoy the Moment: Take a few seconds to appreciate the moment before continuing on your journey!</h1>
 </div>
