--- a/entries/entry1/entry1.html
+++ b/entries/entry1/entry1.html
@@ -58,7 +58,7 @@
 </div>
 
 <br>
-<h1 class="text-title" style="color: rgb(237, 229, 248); text-align: center;">
+<h1 class="text-title" style="color: rgb(255, 255, 255); text-align: center;">
   SOCIAL HOUR: RECHARGING THROUGH CONNECTION</h1>
 <br>
 
@@ -80,6 +80,40 @@
 <p style="color: rgb(255, 205, 118); text-align: center; font-size: 25px; padding-left: 100px; padding-right: 100px;">As part of our commitment to fostering meaningful connections, we've added an interactive feature that allows you to capture and preserve special moments during your visit to the website. Whether you're sharing a fun moment with friends or simply enjoying the experience, this feature lets you take a picture and automatically save it to your files. This element is inspired by the “Social Hour” ritual, where the joy of connecting with others and creating lasting memories is at the heart of the experience. We hope this feature encourages you to pause, capture the moment, and cherish the connections that make life more joyful.</p>
 <br>
 
+<div class="green-section clear" style="background-color: rgb(251, 238, 215);">
+  <div class="mid-content">
+      <div class="green-bttom">
+          <div class="green-content left">
+              <h1>Cherish Your Connections: Capture the Moment!</h1>
+              <br>
+              <div class="green-paragraph">
+                  <ol class="recipe-steps">
+                      <li>
+                          <strong>Find the Camera Icon:</strong>
+                          <p class="substep">Look for the camera icon located on the page.</p>
+                      </li>
+                      <li>
+                          <strong>Click to Capture:</strong>
+                          <p class="substep">Once you’re ready, click on the camera icon to take a picture.</p>
+                          <p class="substep">You can snap a photo with yourself, friends, or anything that captures your moment.</p>
+                      </li>
+                      <li>
+                          <strong>Save Automatically:</strong>
+                          <p class="substep">After you capture the photo, it will automatically save to your device’s files, so you can easily revisit and share the memory later.</p>
+                      </li>
+                      <li>
+                          <strong>Enjoy the Moment:</strong>
+                          <p class="substep">Take a few seconds to appreciate the moment before continuing on your journey!</p>
+                      </li>
+                      <li>
+                          <strong>Enjoy!</strong>
+                      </li>
+                  </ol>
+              </div>
+          </div>
+      </div>    
+  </div>
+</div>
 
 <div class="text-steps">
 <h1>1. Find the Camera Icon: Look for the camera icon located on the page. <br>
