--- a/entries/entry1/entry1.html
+++ b/entries/entry1/entry1.html
@@ -31,7 +31,7 @@
 </ul>
 
 <div class="video-container">
-  <video src="assets/Friends.mp4" preload="metadata" autoplay muted playsinline loop></video>
+  <video src="assets/7048593_Animation_Motion Graphic_3840x2160.mp4" preload="metadata" autoplay muted playsinline loop></video>
   <div class="video-overlay">
       <img src="assets/Friends.png" preload="metadata" alt="True Crime Overlay Image">
           <div class="overlay-text">
