--- a/entries/entry2/entry2.html
+++ b/entries/entry2/entry2.html
@@ -213,13 +213,15 @@
 <script src="sketch.js"></script>
 </head>
 
-<p style="color:rgb(224, 113, 133);">
+<div class="text-section4">
+<p>
   PRESS W = Brows (Cursor at the end of the left brow)<br>
   PRESS E = Eyeshadow (Cursor at the end of left eye) <br>
   PRESS B = Blush (Cursor at the end of left cheek) <br>
   PRESS H = Highlight (Cursor at the tip of the nose) <br>
   PRESS L = Lipstick (Cursor at the middle of the lips)
 </p>
+</div>
 
 </body>
 </html>
