--- a/entries/entry2/entry2.html
+++ b/entries/entry2/entry2.html
@@ -314,6 +314,7 @@ if (key == "h") {
 } 
  
 </script>
+<main><canvas id="defaultCanvas0" class="p5Canvas" width="800" height="800" style="width: 400px;height: 400px;margin-left: 650px;margin-bottom: 50px;"></canvas></main>
 
 </body>
 </html>
